@@ -271,9 +271,9 @@ enum NPCID
     NPCID_GRNVINE_SMB = 222,
     NPCID_GRNVINETOP_SMB = 223,
     NPCID_GRNVINE_SMW = 224,
-    NPCID_REDVINETOP_SMB3 = 225,
-    NPCID_GRNVINETOP_SMB3 = 226,
-    NPCID_GRNVINETOP_SMW = 227,
+    NPCID_VINEHEAD_RED_SMB3 = 225, NPCID_REDVINETOP_SMB3 = NPCID_VINEHEAD_RED_SMB3,
+    NPCID_VINEHEAD_GREEN_SMB3 = 226, NPCID_GRNVINETOP_SMB3 = NPCID_VINEHEAD_GREEN_SMB3,
+    NPCID_VINEHEAD_SMW = 227, NPCID_GRNVINETOP_SMW = NPCID_VINEHEAD_SMW,
     NPCID_YOSHI_CYAN = 228,
     NPCID_GREENCHEEPCHEEP = 229,
     NPCID_REDCHEEPCHEEP = 230,
